--- a/pokedex/templates/index.html
+++ b/pokedex/templates/index.html
@@ -1,22 +1,35 @@
-<html>
-    <head>
-        <title>Pokedex</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <div class="container">
-            <div class="bg-primary text-white p-4 text-center">
-                <h1>Mi Pokedex</h1>
+{% extends "base.html" %}
+{% block title %}POKEDEX{% endblock title %}
+{% block content %}
+    <p class="p-2">Hola, este es tu primer sitio en Django</p>
+    <a href="{% url 'pokedex:add_pokemon' %}">Crear Pokemon</a>
+    <div class=card-group>
+
+        {% for  pokemon in pokemons %}
+            <div class="card">
+                <img src="{{ pokemon.picture.url }}" alt="">
+                <div class="card-body">
+                    <h4 class="card-title">{{pokemon}}</h4>
+                    <p class="card-text">
+                        Entrenador: {{ pokemon.trainer }}
+                        Peso: {{ pokemon.weight }}
+                    </p>
+                    <a href="pokemon/{{ pokemon.id }}" class="btn btn-primary">
+                        <i class="fa-regular fa-eye"></i>
+                    </a>
+                    {% if user.is_authenticated %}
+                    <a href="edit_pokemon/{{ pokemon.id }}" class="btn btn-primary">
+                        <i class="fa-regular fa-pencil"></i>
+                    </a>
+                    
+                    <a href="delete_pokemon/{{ pokemon.id }}" class="btn btn-danger">
+                        <i class="fa-regular fa-trash"></i>
+                    {% endif %}
+                    </a>
+                </div>
             </div>
-            <p class="p-2">Hola, este es tu primer sitio en Django</p>
-            <ul class="list-group">
-                {% for pokemon in pokemons %}
-                <li class="list-group-item">
-                    <a href="{{pokemon}}">{{ pokemon | capfirst }}</a>
-                </li>
-                {% endfor %}
-            </ul>
-        </div>
-    </body>
-</html>
+        {% endfor %}
+    </div>
+    
+    
+    {% endblock content %}
